optimize routes vs react router

--- a/app/views/sparks/index.html.erb
+++ b/app/views/sparks/index.html.erb
@@ -12,7 +12,8 @@
             secondToLastStory: @secondToLastStory, 
             thirdToLastStory: @thirdToLastStory, 
             fourthToLastStory: @fourthToLastStory, 
-            fromPath: @path}.to_json do -%>
+            fromPath: @path,
+            artData: @seeIfStoryExists}.to_json do %>
     
 <% end %>
 
