--- a/app/assets/stylesheets/likes.scss
+++ b/app/assets/stylesheets/likes.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the likes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+.ziploker{
+
+    fill: white
+}
+
+.selected{
+    
+        fill: rgb(98, 155, 101);
+    
+
+}
+    
+    
