--- a/app/assets/stylesheets/likes.scss
+++ b/app/assets/stylesheets/likes.scss
@@ -12,14 +12,20 @@
 
 .selected{
 
-    #layer1 path:nth-child(2){
+    svg{
 
-        fill:#2ef00a2b;
-    }
+        #layer1 path:nth-child(2){
 
-    #layer1 path:nth-child(3){
+            fill:#2ef00a2b;
+        }
 
-        fill: rgb(46, 240, 10);
+        #layer1 path:nth-child(3){
+
+            fill: rgb(46, 240, 10);
+        }
     }
 }
     
+//#f0200a2b;
+
+//#f00a0a;
