--- a/app/assets/stylesheets/sendButton.scss
+++ b/app/assets/stylesheets/sendButton.scss
@@ -1,5 +1,5 @@
 $button-width: 150px;
-$spinner-width: calc($button-width/6);
+$spinner-width: calc(#{$button-width}/6);
 $blue: #0076d3;
 $btn-bg: #8BC34A;
 $text-light: #fefefe;
@@ -51,8 +51,8 @@ $text-light: #fefefe;
   
   &.animate{
     //width: $button-width/2.2;
-    width: calc($button-width/2.2);
-    height: calc($button-width/2.2);
+    width: calc(#{$button-width}/2.2);
+    height: calc(#{$button-width}/2.2);
     min-width: 0;
     border-radius: 50%;
     color: transparent;
@@ -86,7 +86,7 @@ $text-light: #fefefe;
       content: '';
       width: $spinner-width;
       //height: $spinner-width/2;
-      height: calc($spinner-width/2);
+      height: calc(#{$spinner-width}/2);
       border: 4px solid $text-light;
       border-right: 0;
       border-top: 0;
