--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -2,15 +2,15 @@
 .loginBtn {
     box-sizing: border-box;
     position: relative;
-    /* width: 13em;  - apply for fixed size */
+    width: 0px;
     margin: 0.2em;
-    padding: 0 15px 0 46px;
+    padding: 0 80px 0 45px;
     border: none;
     text-align: left;
     line-height: 34px;
     white-space: nowrap;
     border-radius: 0.2em;
-    font-size: 16px;
+    font-size: 14px;
     color: #FFF;
   }
   .loginBtn:before {
@@ -52,6 +52,7 @@
   .loginBtn--google {
     /*font-family: "Roboto", Roboto, arial, sans-serif;*/
     background: #DD4B39;
+    height:" 35px"
   }
   .loginBtn--google:before {
     border-right: #BB3F30 1px solid;
