--- a/app/assets/stylesheets/sendButton.scss
+++ b/app/assets/stylesheets/sendButton.scss
@@ -1,4 +1,4 @@
-$button-width: 150px;
+$button-width: 157.8px;
 $spinner-width: calc(#{$button-width}/6);
 $blue: #0076d3;
 $btn-bg: #ffc439;
@@ -18,6 +18,10 @@ $text-light: #fefefe;
 //    //margin: 30px auto 40px;
 //  }
 //}
+
+
+
+
 .button{
 
   @media only screen and (max-width: 400px){
@@ -32,7 +36,7 @@ $text-light: #fefefe;
   height: 35px;
   line-height: 0;
   color: black;
-  margin: 0 auto;
+  margin: 0 5px 0px 0px;
   background: $btn-bg;
   //color: $text-light;
   font-size: 1.1em;
