--- a/app/assets/stylesheets/sendButtonB.scss
+++ b/app/assets/stylesheets/sendButtonB.scss
@@ -58,7 +58,8 @@ $text-light: #fefefe;
   &.animate{
     //width: $button-width/2.2;
     width: calc(#{$button-width}/2.2);
-    height: calc(#{$button-width}/2.2);
+    //height: calc(#{$button-width}/2.2);
+    height: 71px;
     min-width: 0;
     border-radius: 50%;
     color: transparent;
@@ -166,20 +167,20 @@ $text-light: #fefefe;
 
 @keyframes error {
     from { 
-    transform: translate(-50%, -50%) scale(0);
+    transform: translate(-25%, -25%) scale(0);
     }
     to { 
-    transform: translate(-50%, -50%) scale(1);
+    transform: translate(-25%, -25%) scale(1);
     background-color: #f44336;
     }
 }
 
 @-webkit-keyframes error {
     from { 
-    -webkit-transform: translate(-50%, -50%) scale(0);
+    -webkit-transform: translate(-25%, -25%) scale(0);
     }
     to { 
-    -webkit-transform: translate(-50%, -50%) scale(1);
+    -webkit-transform: translate(-25%, -25%) scale(1);
     background-color: #f44336;
     }
 }
