--- a/app/assets/stylesheets/act.scss
+++ b/app/assets/stylesheets/act.scss
@@ -4,8 +4,9 @@
 
     //width: 81%;
     grid-area: 8/1/9/3;
-    background: white;
+    //background: white;
     justify-self: center;
+    padding-left: 5px;
 
     div{
 
