add communication record for email

--- a/app/assets/stylesheets/edit_styles15.scss
+++ b/app/assets/stylesheets/edit_styles15.scss
@@ -45,3 +45,9 @@ a:active {
 #activity tr:hover {
 	background-color: #ddd;
 }
+
+.recipients {
+	@media only screen and (max-width: 420px) {
+		display: none;
+	}
+}
