webpack/shakapacker update

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,9 +57,8 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
 
     <%# <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application' %>
 
-   
+<%= javascript_pack_tag 'application', 'genesis', 'admin_portal', 'admin_login_screen', 'hello-world-bundle'%>
 
     
    
