--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -1,8 +1,16 @@
 
 
+<%# <%= content_tag :div, %>
+<%#     
+    id: "admin_data_dump",
+    data: {loggedInStatus: @loggedInStatus}.to_json do -%>
+    
+<%# <% end %>
+
+
 <%= content_tag :div,
     
-    id: "admin_data_dump",
+    id: "admin_station",
     data: {loggedInStatus: @loggedInStatus}.to_json do -%>
     
 <% end %>
