--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,9 +58,9 @@
 
     <%# <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-<%= javascript_pack_tag 'application', 'genesis', 'admin_portal', 'admin_login_screen', 'hello-world-bundle'%>
+<%# <%= javascript_pack_tag 'application', 'genesis', 'admin_portal', 'admin_login_screen', 'hello-world-bundle'%> %>
+    <%= javascript_pack_tag "application" %>
 
-    
    
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
