--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,34 +22,6 @@
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     
     
-    
- 
-
- <%
-=begin%>
- <script>
-    window.fbAsyncInit = function() {
-      FB.init({
-        appId      : '{your-app-id}',
-        cookie     : true,
-        xfbml      : true,
-        version    : '{api-version}'
-      });
-        
-      FB.AppEvents.logPageView();   
-        
-    };
-
-    (function(d, s, id){
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) {return;}
-      js = d.createElement(s); js.id = id;
-      js.src = "https://connect.facebook.net/en_US/sdk.js";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
-  </script>  
-<%
-=end%>
 
     
     <meta name="google-signin-client_id" content=<%=Rails.application.credentials.dig(:GOOGLE_OAUTH_CLIENT_ID)%>>
@@ -58,7 +30,7 @@
 
     <%# <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-<%# <%= javascript_pack_tag 'application', 'genesis', 'admin_portal', 'admin_login_screen', 'hello-world-bundle'%> %>
+    <%# <%= javascript_pack_tag 'application', 'genesis', 'admin_portal', 'admin_login_screen', 'hello-world-bundle'%>
     <%= javascript_pack_tag "application" %>
 
    
