--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
 
 
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <%# <meta name="viewport" content="width=device-width, initial-scale=1"> %>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     
