--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,7 @@
 
 
 
-    <%# <meta name="viewport" content="width=device-width, initial-scale=1"> %>
-    <%# <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> %>
-    <%# <meta content=’width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0′ name=’viewport’ /> %>
-    <meta name="viewport" content="width=device-width", initial-scale=1, maximum-scale=1, user-scalable=no>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     
