--- a/app/assets/stylesheets/dots.css
+++ b/app/assets/stylesheets/dots.css
@@ -5,29 +5,37 @@
   transition: all 0.5s ease;
 } */
 
-.react-carousel-dots-dot {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: white;
-  border: 1px solid black;
-  box-sizing: border-box;
-  transition: transform 0.5s ease;
+.eachDot {
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	background-color: white;
+	border: 1px solid black;
+	box-sizing: border-box;
+	transition: transform 0.5s ease;
 }
 
-.react-carousel-dots-dot.active {
-  background-color: black;
+.eachDot.active {
+	background-color: black;
 }
 
 .dot-holder {
-  height: 16px;
-  width: 16px;
-  align-items: center;
+	height: 16px;
+	width: 16px;
+	align-items: center;
 
-  transition: all 0.5s ease;
-  transform: translateX(60px);
-  justify-self: center;
+	transition: all 0.5s ease;
+	transform: translateX(60px);
+	justify-self: center;
 }
-.react-carousel-dots-dot.small {
-  transform: scale(0.5);
+.eachDot.medium {
+	transform: scale(0.6);
+}
+
+.eachDot.small {
+	transform: scale(0.32);
+}
+
+.eachDot.invisible {
+	transform: scale(0.18);
 }
