--- a/app/views/sparks/index.html.erb
+++ b/app/views/sparks/index.html.erb
@@ -32,7 +32,9 @@
             fromPath: @path,
             artData: @seeIfStoryExists,
             page: @page,
-            stories: @stories} %>
+            stories: @stories,
+            allStoriesPlaceholder: @allStoriesPlaceholder,
+            totalNumOfStoriesOnServer: @totalNumOfStoriesOnServer} %>
 
 <%= react_component("App", props: {d: @data}, prerender: false) %>
 
