--- a/app/assets/stylesheets/dots.css
+++ b/app/assets/stylesheets/dots.css
@@ -6,36 +6,50 @@
 } */
 
 .eachDot {
-	width: 100%;
-	height: 100%;
-	border-radius: 50%;
-	background-color: white;
-	border: 1px solid black;
-	box-sizing: border-box;
-	transition: transform 0.5s ease;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: white;
+  border: 1px solid black;
+  box-sizing: border-box;
+  transition: transform 0.5s ease;
 }
 
 .eachDot.active {
-	background-color: black;
+  background-color: black;
 }
 
 .dot-holder {
-	height: 16px;
-	width: 16px;
-	align-items: center;
+  height: 16px;
+  width: 16px;
+  align-items: center;
 
-	transition: all 0.5s ease;
-	transform: translateX(60px);
-	justify-self: center;
+  transition: all 0.5s ease;
+  transform: translateX(60px);
+  justify-self: center;
 }
 .eachDot.medium {
-	transform: scale(0.6);
+  transform: scale(0.6);
 }
 
 .eachDot.small {
-	transform: scale(0.32);
+  transform: scale(0.32);
 }
 
 .eachDot.invisible {
-	transform: scale(0.18);
+  transform: scale(0.18);
+}
+
+.allDotsWrapper {
+  grid-area: 1/2/2/3;
+  display: grid;
+  /* grid-template-columns: ${(props) =>
+    `repeat(${props.allStories.length + 11}, 20px)`}; */
+  /* grid-template-columns: repeat(30, 20px); */
+  overflow: hidden;
+  width: 220px;
+  justify-self: center;
+  margin-bottom: 13px;
+
+  transition: transform 0.5s ease;
 }
