--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -1,70 +1,66 @@
 /* Shared */
 .loginBtn {
+	box-sizing: border-box;
+	position: relative;
+	width: 0px;
+	margin: 0.2em;
+	padding: 0 80px 0 45px;
+	border: none;
+	text-align: left;
+	line-height: 34px;
+	white-space: nowrap;
+	border-radius: 0.2em;
+	font-size: 14px;
+	color: #fff;
+}
+.loginBtn:before {
+	content: "";
+	box-sizing: border-box;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 34px;
+	height: 100%;
+}
+.loginBtn:focus {
+	outline: none;
+}
+.loginBtn:active {
+	box-shadow: inset 0 0 0 32px rgba(0, 0, 0, 0.1);
+}
 
-    
-    box-sizing: border-box;
-    position: relative;
-    width: 0px;
-    margin: 0.2em;
-    padding: 0 80px 0 45px;
-    border: none;
-    text-align: left;
-    line-height: 34px;
-    white-space: nowrap;
-    border-radius: 0.2em;
-    font-size: 14px;
-    color: #FFF;
-  }
-  .loginBtn:before {
-    content: "";
-    box-sizing: border-box;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 34px;
-    height: 100%;
-  }
-  .loginBtn:focus {
-    outline: none;
-  }
-  .loginBtn:active {
-    box-shadow: inset 0 0 0 32px rgba(0,0,0,0.1);
-  }
-  
-  
-  /* Facebook */
-  .loginBtn--facebook {
-    grid-area: 2/2/3/3;
-    justify-self: start;
-    background-color: #4C69BA;
-    background-image: linear-gradient(#4C69BA, #3B55A0);
-    /*font-family: "Helvetica neue", Helvetica Neue, Helvetica, Arial, sans-serif;*/
-    text-shadow: 0 -1px 0 #354C8C;
-  }
-  .loginBtn--facebook:before {
-    border-right: #364e92 1px solid;
-    background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_facebook.png') 6px 6px no-repeat;
-  }
-  .loginBtn--facebook:hover,
-  .loginBtn--facebook:focus {
-    background-color: #5B7BD5;
-    background-image: linear-gradient(#5B7BD5, #4864B1);
-  }
-  
-  
-  /* Google */
-  .loginBtn--google {
-    /*font-family: "Roboto", Roboto, arial, sans-serif;*/
-    justify-self: end;
-    grid-area: 2/1/3/2;
-    background: #DD4B39;
-    height:" 35px"
-  }
-  .loginBtn--google:before {
-    border-right: #BB3F30 1px solid;
-    background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_google.png') 6px 6px no-repeat;
-  }
-  .loginBtn--google:hover,
-  .loginBtn--google:focus {
-    background: #E74B37;
-  }
+/* Facebook */
+.loginBtn--facebook {
+	grid-area: 2/2/3/3;
+	justify-self: start;
+	background-color: #4c69ba;
+	background-image: linear-gradient(#4c69ba, #3b55a0);
+	text-shadow: 0 -1px 0 #354c8c;
+}
+.loginBtn--facebook:before {
+	border-right: #364e92 1px solid;
+	background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_facebook.png") 6px 6px
+		no-repeat;
+}
+.loginBtn--facebook:hover,
+.loginBtn--facebook:focus {
+	background-color: #5b7bd5;
+	background-image: linear-gradient(#5b7bd5, #4864b1);
+}
+
+/* Google */
+.loginBtn--google {
+	justify-self: end;
+	grid-area: 2/1/3/2;
+	background: #dd4b39;
+	height: " 35px";
+}
+.loginBtn--google:before {
+	border-right: #bb3f30 1px solid;
+	background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_google.png") 6px 6px
+		no-repeat;
+}
+.loginBtn--google:hover,
+.loginBtn--google:focus {
+	background: #e74b37;
+}
