--- a/app/assets/stylesheets/act-style1.scss
+++ b/app/assets/stylesheets/act-style1.scss
@@ -28,10 +28,10 @@
 
 .testClass {
   //width: 81%;
-  grid-area: 8/1/9/3;
+  //grid-area: 8/1/9/3;
   //background: white;
-  justify-self: center;
-  padding-left: 5px;
+  //justify-self: center;
+  //padding-left: 5px;
 
   div {
     div {
