--- a/app/assets/stylesheets/dots.css
+++ b/app/assets/stylesheets/dots.css
@@ -20,8 +20,8 @@
 }
 
 .dot-holder {
-  height: 16px;
-  width: 16px;
+  height: 8px;
+  width: 8px;
   align-items: center;
 
   transition: all 0.5s ease;
@@ -40,7 +40,7 @@
   transform: scale(0.18);
 }
 
-.allDotsWrapper {
+.allDotsWrapperClass {
   grid-area: 1/2/2/3;
   display: grid;
 
