--- a/app/assets/stylesheets/dots.css
+++ b/app/assets/stylesheets/dots.css
@@ -6,48 +6,48 @@
 } */
 
 .eachDot {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: white;
-  border: 1px solid black;
-  box-sizing: border-box;
-  transition: transform 0.5s ease;
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	background-color: white;
+	border: 1px solid black;
+	box-sizing: border-box;
+	transition: transform 0.5s ease;
 }
 
 .eachDot.active {
-  background-color: black;
+	background-color: black;
 }
 
 .dot-holder {
-  height: 8px;
-  width: 8px;
-  align-items: center;
-
-  transition: all 0.5s ease;
-  transform: translateX(60px);
-  justify-self: center;
+	height: 10px;
+	width: 10px;
+	align-items: center;
+	align-self: center;
+	transition: all 0.5s ease;
+	transform: translateX(60px);
+	justify-self: center;
 }
 .eachDot.medium {
-  transform: scale(0.6);
+	transform: scale(0.6);
 }
 
 .eachDot.small {
-  transform: scale(0.32);
+	transform: scale(0.32);
 }
 
 .eachDot.invisible {
-  transform: scale(0.18);
+	transform: scale(0.18);
 }
 
 .allDotsWrapperClass {
-  grid-area: 1/2/2/3;
-  display: grid;
+	grid-area: 1/2/2/3;
+	display: grid;
 
-  overflow: hidden;
-  width: 220px;
-  justify-self: center;
-  margin-bottom: 13px;
+	overflow: hidden;
+	width: 220px;
+	height: 15px;
+	justify-self: center;
 
-  transition: transform 0.5s ease;
+	transition: transform 0.5s ease;
 }
