--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,21 @@
   <head>
     <title>Floridablaze></title>
     
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@800&family=PT+Serif&family=Permanent+Marker&display=swap" rel="stylesheet">
+    <%#link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@800&family=PT+Serif&family=Permanent+Marker&display=swap" rel="stylesheet"%>
   
-
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script>
+      WebFont.load({
+        google: {
+          families: ['Fira Sans'],
+          urls: [
+                  'https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;800&family=PT+Serif&family=Permanent+Marker&display=swap'
+              ]
+        }
+      });
+    </script> 
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes" />
