--- a/app/assets/stylesheets/edit_styles_21.scss
+++ b/app/assets/stylesheets/edit_styles_21.scss
@@ -1,23 +1,23 @@
-a {
-	cursor: pointer;
-}
+// a {
+// 	cursor: pointer;
+// }
 
-a:link {
-	color: red;
-}
+// a:link {
+// 	color: red;
+// }
 
-/* visited link */
-a:visited {
-	color: green;
-}
+// /* visited link */
+// a:visited {
+// 	color: green;
+// }
 
-/* mouse over link */
-a:hover {
-	color: hotpink;
-}
+// /* mouse over link */
+// a:hover {
+// 	color: hotpink;
+// }
 
-/* selected link */
-a:active {
-	color: blue;
-}
+// /* selected link */
+// a:active {
+// 	color: blue;
+// }
 
