--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,12 +39,12 @@
     
     <meta name="google-signin-client_id" content=<%=Rails.application.credentials.dig(:GOOGLE_OAUTH_CLIENT_ID)%>>
     <%# <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_pack_tag 'testStyle' %>
+    <%= stylesheet_pack_tag 'application' %>
 
     <%# <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <%# <%= javascript_pack_tag 'application', 'genesis', 'admin_portal', 'admin_login_screen', 'hello-world-bundle'%>
-    <%= javascript_pack_tag "application" %>
+    <%# <%= javascript_pack_tag "application", "floridablaze-bundle"%> 
 
    
 
