--- a/app/views/sparks/index.html.erb
+++ b/app/views/sparks/index.html.erb
@@ -36,6 +36,9 @@
             allStoriesPlaceholder: @allStoriesPlaceholder,
             totalNumOfStoriesOnServer: @totalNumOfStoriesOnServer} %>
 
+<%# <%= react_component("App", props: {d: @data}, prerender: false) %>
+
 <%= react_component("App", props: {d: @data}, prerender: false) %>
+
 
 
