--- a/app/views/layouts/floridablaze.html.erb
+++ b/app/views/layouts/floridablaze.html.erb
@@ -5,6 +5,7 @@
     <title>floridablazer</title>
     <%= csrf_meta_tags %>
     <%= javascript_pack_tag 'floridablaze-bundle' %>
+    <%= stylesheet_pack_tag 'application' %>
     
   </head>
 
