--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
     <%# <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <%# <%= javascript_pack_tag 'application', 'genesis', 'admin_portal', 'admin_login_screen', 'hello-world-bundle'%>
-    <%# <%= javascript_pack_tag "application", "floridablaze-bundle"%> 
+    <%= javascript_pack_tag "application", "floridablaze-bundle"%> 
 
    
 
