--- a/app/views/layouts/floridablaze.html.erb
+++ b/app/views/layouts/floridablaze.html.erb
@@ -5,8 +5,8 @@
     <title>floridablazer</title>
     <%= csrf_meta_tags %>
    
-       <%= javascript_pack_tag "floridablaze-bundle"%> 
-        <%= stylesheet_link_tag 'application', media: 'all' %>
+      <%= javascript_pack_tag "application", "floridablaze-bundle" %> 
+    <%= stylesheet_link_tag 'application', media: 'all' %>
     
   </head>
 
