--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,3 +1,33 @@
 // Place all the styles related to the comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+/* ##### comment styles ####### */
+  
+
+.replies{
+
+    //transform: scale(1);
+    max-height: 300px;
+    transition: all 197ms ease;
+    opacity: 1;
+    //transform: translateX(0%);
+    //transition-delay: 50ms;
+    
+    //position: relative;
+    margin: 10px 0px 0px 25px;
+    
+
+    
+    }
+    
+    
+    
+    .replies.shrink{
+    
+    max-height: 0;
+    //transform: scale(0);
+    opacity: 0;
+    //transform: translateX(100%);
+    
+    }
+    
