--- a/app/views/layouts/floridablaze.html.erb
+++ b/app/views/layouts/floridablaze.html.erb
@@ -1,16 +1,17 @@
-<%= puts "inside layooooooooooooooooooooooout" %>
+<%#= puts "inside layooooooooooooooooooooooout" 
 <!DOCTYPE html>
 <html>
   <head>
     <title>floridablazer</title>
-    <%= csrf_meta_tags %>
+    <%= csrf_meta_tags 
    
-      <%= javascript_pack_tag "application", "floridablaze-bundle" %> 
-    <%= stylesheet_link_tag 'application', media: 'all' %>
+     javascript_pack_tag "application", "floridablaze-bundle" 
+    stylesheet_link_tag 'application', media: 'all' 
     
   </head>
 
   <body>
-    <%= yield %>
+    <%= yield 
   </body>
 </html>
+%>
