--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,13 +38,11 @@
 
     
     <meta name="google-signin-client_id" content=<%=Rails.application.credentials.dig(:GOOGLE_OAUTH_CLIENT_ID)%>>
-    <%# <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     
 
-    <%# <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-    <%#<%= javascript_pack_tag 'application', 'genesis', 'admin_portal', 'admin_login_screen', 'hello-world-bundle'%>
-    
+    <%= javascript_pack_tag "application", "floridablaze-bundle"%> 
+    <%= stylesheet_link_tag 'application', media: 'all' %>
 
    
 
