--- a/app/assets/stylesheets/dotStyles.scss
+++ b/app/assets/stylesheets/dotStyles.scss
@@ -1,96 +1,116 @@
-
-
 .eachDot {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    background-color: white;
-    border: 1px solid black;
-    box-sizing: border-box;
-    transition: transform 0.5s ease;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: white;
+  border: 1px solid black;
+  box-sizing: border-box;
+  transition: transform 0.5s ease;
+}
+
+.eachDot.active {
+  background-color: black;
+}
+
+.dot-holder {
+  height: 10px;
+  width: 10px;
+  align-items: center;
+  align-self: center;
+  transition: all 0.5s ease;
+  transform: translateX(60px);
+  justify-self: center;
+}
+.eachDot.medium {
+  transform: scale(0.6);
+}
+
+.eachDot.small {
+  transform: scale(0.32);
+}
+
+.eachDot.invisible {
+  transform: scale(0.18);
+}
+
+.allDotsWrapper {
+  grid-area: 1/2/2/3;
+  display: grid;
+
+  overflow: hidden;
+  width: 220px;
+  height: 15px;
+  justify-self: center;
+
+  transition: transform 0.5s ease;
+}
+/* ###### */
+
+.pac-item span:not(:first-child) {
+  font-size: 1.5rem !important;
+  // color: rgb(61, 61, 61);
+  //color: red;
+
+  @media only screen and (max-width: 985px) {
+    font-size: 2rem !important;
   }
-  
-  .eachDot.active {
-    background-color: black;
-  }
-  
-  .dot-holder {
-    height: 10px;
-    width: 10px;
-    align-items: center;
-    align-self: center;
-    transition: all 0.5s ease;
-    transform: translateX(60px);
-    justify-self: center;
-  }
-  .eachDot.medium {
-    transform: scale(0.6);
-  }
-  
-  .eachDot.small {
-    transform: scale(0.32);
-  }
-  
-  .eachDot.invisible {
-    transform: scale(0.18);
-  }
-  
-  .allDotsWrapper {
-    grid-area: 1/2/2/3;
-    display: grid;
-  
-    overflow: hidden;
-    width: 220px;
-    height: 15px;
-    justify-self: center;
-  
-    transition: transform 0.5s ease;
-  }
-  /* ###### */
-  
-  
-  .pac-item span:not(:first-child) {
-    font-size: 36px;
-    color: rgb(61, 61, 61);
-  }
-  
-  .pac-item {
-    padding: 8px 0;
-  }
-  
-  // .pac-container {
-  //   font-size: 20px;
-  //   color: orange;
-  // }
-  // .pac-item-query {
-  //   font-size: 20px;
-  //   color: green;
-  // }
-  
-  // .pac-matched {
-  //   font-size: 20px;
-  //   color: brown;
-  // }
-  
-  // .pac-matched {
-  //   font-size: 20px;
-  //   color: blue;
-  // }
-  
-  .testClass {
-    //width: 81%;
-    //grid-area: 8/1/9/3;
-    //background: white;
-    //justify-self: center;
-    //padding-left: 5px;
-  
+}
+
+// // // .pac-item {
+// // //   padding: 10px 0 10px 5px !important;
+// // //   // @media only screen and (max-width: 985px) {
+// // //   //   font-size: 3.4rem !important;
+// // //   // }
+// // // }
+
+// // // // .pac-icon {
+// // // //   //background-size: 50px;
+// // // // }
+
+// // // .pac-item-query {
+// // //   font-size: 3rem !important;
+// // //   @media only screen and (max-width: 985px) {
+// // //     font-size: 2rem !important;
+// // //     padding: 50px 0 10px 5px !important;
+// // //   }
+// // // }
+
+// // // // .pac-container {
+// // // //   font-size: 20px;
+// // // //   color: orange;
+// // // // }
+// // // // .pac-item-query {
+// // // //   font-size: 20px;
+// // // //   color: green;
+// // // // }
+
+// // // .pac-matched {
+// // //   font-size: 3rem !important;
+// // //   @media only screen and (max-width: 985px) {
+// // //     font-size: 2rem !important;
+// // //     padding: 50px 0 10px 5px !important;
+// // //   }
+// // // }
+
+// .pac-matched {
+//   font-size: 20px;
+//   color: blue;
+// }
+
+.testClass {
+  //width: 81%;
+  //grid-area: 8/1/9/3;
+  //background: white;
+  //justify-self: center;
+  //padding-left: 5px;
+
+  div {
     div {
-      div {
-        //width: 216px !important;
-  
-        iframe {
-          //width: 216px;
-        }
+      //width: 216px !important;
+
+      iframe {
+        //width: 216px;
       }
     }
   }
+}
