--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     
   
     <%# <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes" /> %>
-    <meta name="viewport" content="width=device-width, initial-scale=1.5">
+     <%# <meta name="viewport" content="width=device-width, initial-scale=1.5"> %>
    
     
 
