--- a/app/views/layouts/floridablaze.html.erb
+++ b/app/views/layouts/floridablaze.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>floridablazer</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
