font size reset

--- a/app/assets/stylesheets/dotStyles.scss
+++ b/app/assets/stylesheets/dotStyles.scss
@@ -51,7 +51,7 @@
 // // // .pac-item {
 // // //   padding: 10px 0 10px 5px !important;
 // // //   // @media only screen and (max-width: 985px) {
-// // //   //   font-size: 3.4rem !important;
+// // //   //   // font-size: 3.4rem !important;
 // // //   // }
 // // // }
 
@@ -60,32 +60,32 @@
 // // // // }
 
 // // // .pac-item-query {
-// // //   font-size: 3rem !important;
+// // //   // font-size: 3rem !important;
 // // //   @media only screen and (max-width: 985px) {
-// // //     font-size: 2rem !important;
+// // //     // font-size: 2rem !important;
 // // //     padding: 50px 0 10px 5px !important;
 // // //   }
 // // // }
 
 // // // // .pac-container {
-// // // //   font-size: 20px;
+// // // //   // font-size: 20px;
 // // // //   color: orange;
 // // // // }
 // // // // .pac-item-query {
-// // // //   font-size: 20px;
+// // // //   // font-size: 20px;
 // // // //   color: green;
 // // // // }
 
 // // // .pac-matched {
-// // //   font-size: 3rem !important;
+// // //   // font-size: 3rem !important;
 // // //   @media only screen and (max-width: 985px) {
-// // //     font-size: 2rem !important;
+// // //     // font-size: 2rem !important;
 // // //     padding: 50px 0 10px 5px !important;
 // // //   }
 // // // }
 
 // .pac-matched {
-//   font-size: 20px;
+//   // font-size: 20px;
 //   color: blue;
 // }
 
