--- a/app/assets/stylesheets/sendButtonB.scss
+++ b/app/assets/stylesheets/sendButtonB.scss
@@ -33,7 +33,7 @@ $text-light: #fefefe;
   margin: 0 5px 0px 0px;
   background: $btn-bg;
   //color: $text-light;
-  font-size: 1.1rem;
+  // font-size: 1.1rem;
   padding: 1em;
   border-radius: 4px;
   text-align: center;
@@ -110,7 +110,7 @@ $text-light: #fefefe;
         color: #fff;
         position: absolute;
         content: "!";
-        font-size: 1.8rem;
+        // font-size: 1.8rem;
         font-weight: bold;
         text-align: center;
         left: 50%;
