--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -12,7 +12,7 @@
   line-height: 34px;
   white-space: nowrap;
   border-radius: 0.2em;
-  font-size: 14px;
+  // font-size: 14px;
   color: #fff;
 }
 .loginBtn:before {
