--- a/app/assets/stylesheets/home_story_spinner.scss
+++ b/app/assets/stylesheets/home_story_spinner.scss
@@ -14,7 +14,7 @@
   text-indent: -9999em;
   margin: 88px auto;
   position: relative;
-  font-size: 11px;
+  // font-size: 11px;
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
   transform: translateZ(0);
