--- a/app/assets/stylesheets/tiptap.scss
+++ b/app/assets/stylesheets/tiptap.scss
@@ -35,7 +35,7 @@
       color: inherit;
       padding: 0;
       background: none;
-      font-size: 0.8rem;
+      // font-size: 0.8rem;
     }
   }
 
