ad sense take 2

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
     <%# <meta name="viewport" content="width=device-width, initial-scale=1.0"> %>
    
     
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5712483420848978"
+     crossorigin="anonymous"></script>
 
 
     <script src="https://apis.google.com/js/platform.js" async defer></script>
