ad sense take 3

--- a/app/views/layouts/floridablaze.html.erb
+++ b/app/views/layouts/floridablaze.html.erb
@@ -3,12 +3,11 @@
   <head>
     <title>floridablazer</title>
     <meta name="viewport" content="width=device-width">
+    <meta name="google-adsense-account" content="ca-pub-5712483420848978">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5712483420848978"
-     crossorigin="anonymous"></script>
-
+   \
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@800&family=PT+Serif&family=Permanent+Marker&display=swap" rel="stylesheet">
