--- a/app/views/layouts/floridablaze.html.erb
+++ b/app/views/layouts/floridablaze.html.erb
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     
      <%= javascript_pack_tag "floridablaze-bundle"%> 
-     <%= stylesheet_pack_tag "application", media: "all" %>
+     <%= stylesheet_pack_tag "application"%>
    
     
   </head>
