--- a/app/views/layouts/floridablaze.html.erb
+++ b/app/views/layouts/floridablaze.html.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>floridablazer</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5712483420848978"
+     crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width">
     <meta name="google-adsense-account" content="ca-pub-5712483420848978">
     
