--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
     <%# <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes" /> %>
     <%# <meta name="viewport" content="width=device-width, initial-scale=1.0"> %>
    
-    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5712483420848978"
+     crossorigin="anonymous"></script>
 
 
 
