--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>floridablazer admin</title>
+    <title>floridablazer Admin Page</title>
     <meta name="viewport" content="width=device-width">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <meta name="robots" content="NoIndex,NoFollow">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@800&family=PT+Serif&family=Permanent+Marker&display=swap" rel="stylesheet">
