made actnow link and minor font size adjustment

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="robots" content="index,follow">
-    <meta name="description" content="Bringing you the latest marijuana related news and laws affecting Florida. We also make it easy to find and contact your State Representatives.">
+    
+    <title>Cannabis News for Florida | Lookup State Representatives></title>
+
+    <meta name="description" content="Bringing you the latest Cannabis related news and information about recent changes in drug laws affecting Florida. We also make it easy to Lookup your State Representatives and contact them via USPS in just a few clicks.">
 
     <meta name="viewport" content="width=device-width">
     <meta name="google-adsense-account" content="ca-pub-5712483420848978">
@@ -32,10 +35,16 @@
      <%= javascript_pack_tag "floridablaze-bundle"%> 
      <%= stylesheet_pack_tag "application"%>
     
-    <title>Florida Based Marijuana News | Contact State Representatives | FloridaBlaze.io ></title>
     
-    
-  
+    <meta property="og:title" content="Cannabis News for Florida | Lookup State Representativese">
+    <meta property="og:description" content="Add description here">
+    <%#  <meta property="og:image" content="https://your-website.com/og-image.png"> %>
+    <meta property="og:url" content="https://floridaBlaze.io">
+    <meta property="og:site_name" content="FloridaBlaze.io">
+    <meta name="twitter:title" content="Cannabis News for Florida | Lookup State Representativese">
+    <meta name="twitter:description" content="Bringing you the latest Cannabis related news and information about recent changes in drug laws affecting Florida. We also make it easy to Lookup your State Representatives and contact them via USPS in just a few clicks.">
+    <%#  <meta name="twitter:url" content="https://your-website.com/twitter-image.png"> %>
+    <meta name="twitter:card" content="app">
     <%# <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes" /> %>
     <%# <meta name="viewport" content="width=device-width, initial-scale=1.0"> %>
    
