fixed dynamic link tag for articles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <meta name="robots" content="index,follow">
     
     <title>Cannabis News for Florida | Lookup State Representatives></title>
-
+    <link rel="canonical" href="https://floridablaze.io/" data-react-helmet="true">
     <meta name="description" content="Bringing you the latest Cannabis related news and information about recent changes in drug laws affecting Florida. We also make it easy to Lookup your State Representatives and contact them via USPS in just a few clicks.">
 
     <meta name="viewport" content="width=device-width">
