--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,16 +34,17 @@
     
      <%= javascript_pack_tag "floridablaze-bundle"%> 
      <%= stylesheet_pack_tag "application"%>
+    <%#
     
-    
-    <meta property="og:title" content="Cannabis News for Florida | Lookup State Representativese">
-    <meta property="og:description" content="Add description here">
-    <%#  <meta property="og:image" content="https://your-website.com/og-image.png"> %>
-    <meta property="og:url" content="https://floridaBlaze.io">
-    <meta property="og:site_name" content="FloridaBlaze.io">
+    <meta property="og:title" content="Cannabis News for Florida | Lookup State Representativese" data-react-helmet="true">
+    <meta property="og:description" content="Add description here" data-react-helmet="true">
+    <meta property="og:image" content="https://weedblogimages.s3.amazonaws.com/company_logo.png" data-react-helmet="true">
+    <meta property="og:url" content="https://floridaBlaze.io" data-react-helmet="true">
+    <meta property="og:site_name" content="FloridaBlaze.io" data-react-helmet="true">
+    <%#
     <meta name="twitter:title" content="Cannabis News for Florida | Lookup State Representativese">
     <meta name="twitter:description" content="Bringing you the latest Cannabis related news and information about recent changes in drug laws affecting Florida. We also make it easy to Lookup your State Representatives and contact them via USPS in just a few clicks.">
-    <%#  <meta name="twitter:url" content="https://your-website.com/twitter-image.png"> %>
+    <meta name="twitter:url" content="https://weedblogimages.s3.amazonaws.com/company_logo.png">
     <meta name="twitter:card" content="app">
     <%# <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes" /> %>
     <%# <meta name="viewport" content="width=device-width, initial-scale=1.0"> %>
