react query for article

--- a/app/assets/stylesheets/edit_styles.scss
+++ b/app/assets/stylesheets/edit_styles.scss
@@ -62,7 +62,7 @@ a:active {
 //spinner for when loading data
 
 .lds-spinner {
-  color: official;
+  color: orange;
   display: inline-block;
   position: relative;
   width: 80px;
