--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -55,7 +55,7 @@
   justify-self: end;
   grid-area: 2/1/3/2;
   background: #dd4b39;
-  height: " 35px";
+  height: 35px;
 }
 .loginBtn--google:before {
   border-right: #bb3f30 1px solid;
