--- a/app/views/sparks/index.html.erb
+++ b/app/views/sparks/index.html.erb
@@ -31,9 +31,10 @@
             fromPath: @path,
             artData: @seeIfStoryExists,
             page: @page,
-            stories: @stories,
-            allStoriesPlaceholder: @allStoriesPlaceholder,
-            totalNumOfStoriesOnServer: @totalNumOfStoriesOnServer} %>
+            stories: @stories} %>
+            
+            <%#allStoriesPlaceholder: @allStoriesPlaceholder,
+            totalNumOfStoriesOnServer: @totalNumOfStoriesOnServer%>
 
 <%# <%= react_component("App", props: {d: @data}, prerender: false) %>
 
