--- a/app/views/sparks/index.html.erb
+++ b/app/views/sparks/index.html.erb
@@ -31,7 +31,8 @@
             fromPath: @path,
             artData: @seeIfStoryExists,
             page: @page,
-            stories: @stories} %>
+            stories: @stories,
+            showHome: @showHome} %>
             
             <%#allStoriesPlaceholder: @allStoriesPlaceholder,
             totalNumOfStoriesOnServer: @totalNumOfStoriesOnServer%>
